@@ -645,22 +645,50 @@ class FormFile
         $url=$_SERVER["PHP_SELF"];
         print '<table width="100%" class="nobordernopadding">';
         print '<tr class="liste_titre">';
-        print_liste_field_titre($langs->trans("Ref"),$_SERVER["PHP_SELF"],"","",$param,'align="left"',$sortfield,$sortorder);
+        $sortref="fullname";
+        if ($modulepart == 'invoice_supplier') $sortref='';    // No sort for supplier invoices as path name is not
+        print_liste_field_titre($langs->trans("Ref"),$_SERVER["PHP_SELF"],$sortref,"",$param,'align="left"',$sortfield,$sortorder);
         print_liste_field_titre($langs->trans("Documents2"),$_SERVER["PHP_SELF"],"name","",$param,'align="left"',$sortfield,$sortorder);
         print_liste_field_titre($langs->trans("Size"),$_SERVER["PHP_SELF"],"size","",$param,'align="right"',$sortfield,$sortorder);
         print_liste_field_titre($langs->trans("Date"),$_SERVER["PHP_SELF"],"date","",$param,'align="center"',$sortfield,$sortorder);
         print_liste_field_titre('','','');
         print '</tr>';
 
+        // To show ref or specific information according to view to show (defined by $module)
         if ($modulepart == 'invoice')
         {
             include_once(DOL_DOCUMENT_ROOT.'/compta/facture/class/facture.class.php');
-            $object_static=new Facture($this->db);
+            $object_instance=new Facture($this->db);
         }
-        if ($modulepart == 'invoice_supplier')
+        else if ($modulepart == 'invoice_supplier')
         {
             include_once(DOL_DOCUMENT_ROOT.'/fourn/class/fournisseur.facture.class.php');
-            $object_static=new FactureFournisseur($this->db);
+            $object_instance=new FactureFournisseur($this->db);
+        }
+        else if ($modulepart == 'propal')
+        {
+            include_once(DOL_DOCUMENT_ROOT.'/comm/propal/class/propal.class.php');
+            $object_instance=new Propal($this->db);
+        }
+        else if ($modulepart == 'order')
+        {
+            include_once(DOL_DOCUMENT_ROOT.'/commande/class/commande.class.php');
+            $object_instance=new Commande($this->db);
+        }
+        else if ($modulepart == 'order_supplier')
+        {
+            include_once(DOL_DOCUMENT_ROOT.'/fourn/class/fournisseur.commande.class.php');
+            $object_instance=new CommandeFournisseur($this->db);
+        }
+        else if ($modulepart == 'contract')
+        {
+            include_once(DOL_DOCUMENT_ROOT.'/contrat/class/contrat.class.php');
+            $object_instance=new Contrat($this->db);
+        }
+        else if ($modulepart == 'tax')
+        {
+            include_once(DOL_DOCUMENT_ROOT.'/compta/sociales/class/chargesociales.class.php');
+            $object_instance=new ChargeSociales($this->db);
         }
 
         $var=true;
@@ -674,28 +702,32 @@ class FormFile
             {
                 // Define relative path used to store the file
                 $relativefile=preg_replace('/'.preg_quote($upload_dir.'/','/').'/','',$file['fullname']);
-                //print 'eeee'.$relativefile;
+
                 //var_dump($file);
+                $id=0; $ref=''; $object_instance->id=0; $object_instance->ref=''; $label='';
+
+                // To show ref or specific information according to view to show (defined by $module)
+                if ($modulepart == 'invoice')          { preg_match('/(.*)\/[^\/]+$/',$relativefile,$reg);  $ref=$reg[1]; }
+                if ($modulepart == 'invoice_supplier') { preg_match('/(\d+)\/[^\/]+$/',$relativefile,$reg); $id=$reg[1]; }
+                if ($modulepart == 'propal')           { preg_match('/(.*)\/[^\/]+$/',$relativefile,$reg);  $ref=$reg[1]; }
+                if ($modulepart == 'order')            { preg_match('/(.*)\/[^\/]+$/',$relativefile,$reg);  $ref=$reg[1]; }
+                if ($modulepart == 'order_supplier')   { preg_match('/(.*)\/[^\/]+$/',$relativefile,$reg);  $ref=$reg[1]; }
+                if ($modulepart == 'contract')         { preg_match('/(.*)\/[^\/]+$/',$relativefile,$reg);  $ref=$reg[1]; }
+                if ($modulepart == 'tax')              { preg_match('/(\d+)\/[^\/]+$/',$relativefile,$reg); $id=$reg[1]; }
+
+                if (is_object($this->cache_objects[$modulepart.'_'.$id.'_'.$ref])) $object_instance=$this->cache_objects[$modulepart.'_'.$id.'_'.$ref];
+                else
+                {
+                    //print 'Fetch '.$idorref.'<br>';
+                    $result=$object_instance->fetch($id,$ref);
+                    if ($result > 0) $this->cache_objects[$modulepart.'_'.$id.'_'.$ref]=dol_clone($object_instance);    // Save object into a cache
+                }
+
                 $var=!$var;
                 print '<tr '.$bc[$var].'>';
                 print '<td>';
-                $id='';$ref='';
-                if ($modulepart == 'invoice')
-                {
-                    preg_match('/(.*)\/[^\/]+$/',$relativefile,$reg);
-                    $ref=$reg[1];
-                    $object_static->fetch('',$ref);
-                    //print $relativefile.'rr'.$id;
-                    print $object_static->getNomUrl(1,'document');
-                }
-                if ($modulepart == 'invoice_supplier')
-                {
-                    preg_match('/(\d+)\/[^\/]+$/',$relativefile,$reg);
-                    $id=$reg[1];
-                    $object_static->fetch($id);
-                    //print $relativefile.'rr'.$id;
-                    print $object_static->getNomUrl(1,'document');
-                }
+                if ($object_instance->id) print $object_instance->getNomUrl(1,'document');
+                else print $langs->trans("ObjectDeleted",($id?$id:$ref));
                 print '</td>';
                 print '<td>';
                 //print "XX".$file['name']; //$file['name'] must be utf8
