@@ -46,6 +46,8 @@ For users:
 - New: Install process is now two times faster.
 - New: Extra fields support int type.
 - New: Add brazilian states.
+- New: Automtic list of documents in ECM module is ok for customers,
+       suppliers invoice, orders, customers orders, proposals and social contributions.
 - Fix: Can use POS module with several concurrent users.
 
 For developers:
